breaking markup into wp theme

--- a/wp-content/themes/intrepid/package.json
+++ b/wp-content/themes/intrepid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intrepid",
+  "name": "eleven11",
   "repository": "none",
   "version": "1.0.0",
   "description": "Default Wordpress Install ( via Gulp.js )",
@@ -13,13 +13,13 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.6.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sass-glob": "^1.0.9",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {}
